[package]
name = "nexa-proxy"
description = "NexaNet built-in reverse proxy — minimal HTTP/1.1+HTTP/2 proxy with ACME TLS"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/nexa-net/nexa-proxy"
rust-version = "1.85"

[lib]
name = "nexa_proxy"
path = "src/lib.rs"

[[bin]]
name = "nexa-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
prometheus = "0.13"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "routing"
harness = false
